--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,10 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-
+  password: mystical
+  port: 5432
+  host: localhost
+  user: postgres
 development:
   <<: *default
   database: car_reservation_api_development
