--- a/config/database.yml
+++ b/config/database.yml
@@ -20,10 +20,7 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  password: mystical
-  port: 5432
-  host: localhost
-  user: postgres
+
 development:
   <<: *default
   database: car_reservation_api_development
@@ -84,6 +81,4 @@ test:
 #
 production:
   <<: *default
-  database: car_reservation_api_production
-  username: car_reservation_api
-  password: <%= ENV["CAR_RESERVATION_API_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
