--- a/ render.yaml
+++ b/ render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: mysite
-    databaseName: mysite
-    user: mysite
+  - name: carbooker
+    databaseName: carbooker
+    user: carbooker_user
 
 services:
   - type: web
-    name: mysite
+    name: carbooker
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: carbooker
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
